fixed nav position on mobile

--- a/code/sass/components/_header.scss
+++ b/code/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
 	position: relative;
-	top: 3.3em;
+	top: 0;
 	display: block;
 	height: 45rem;
 	background-color: $color-Hero-Background-light;
@@ -8,6 +8,10 @@
 	overflow: hidden;
 	perspective: 10px;
 	z-index: 10;
+
+	@media screen and ( min-width: 650px ) {
+		top: 3.3em;
+	}
 
 	&:before,
 	&:after {
